samples/myapp/mysvc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp
  name: web
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
  selector:
    app: myapp
